# poca-opencv

./: CMakeLists.txt  README.md  main.cpp
include/: bezier_curve.h
src/: bezier_curve.cpp
